[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }

[[bench]]
name = "day1"
harness = false
        
[[bench]]
name = "day2"
harness = false
        
[[bench]]
name = "day3"
harness = false
        
[[bench]]
name = "day4"
harness = false
        
[[bench]]
name = "day5"
harness = false
        
[[bench]]
name = "day6"
harness = false
        
[[bench]]
name = "day7"
harness = false
        
[[bench]]
name = "day8"
harness = false
        
[[bench]]
name = "day9"
harness = false
        
[[bench]]
name = "day10"
harness = false
        
[[bench]]
name = "day11"
harness = false
        
[[bench]]
name = "day12"
harness = false
        
[[bench]]
name = "day13"
harness = false
        
[[bench]]
name = "day14"
harness = false
        
[[bench]]
name = "day15"
harness = false
        
[[bench]]
name = "day16"
harness = false
        
[[bench]]
name = "day17"
harness = false
        
[[bench]]
name = "day18"
harness = false
        
[[bench]]
name = "day19"
harness = false
        
[[bench]]
name = "day20"
harness = false
        
[[bench]]
name = "day21"
harness = false
        
[[bench]]
name = "day22"
harness = false
        
[[bench]]
name = "day23"
harness = false
        
[[bench]]
name = "day24"
harness = false
        
[[bench]]
name = "day25"
harness = false
        