[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
ars = {git = "https://github.com/A1cey/ars.git"}

[[bench]]
name = "day1"
harness = false
        
[[bench]]
name = "day2"
harness = false
        
[[bench]]
name = "day3"
harness = false
        
[[bench]]
name = "day4"
harness = false
        
[[bench]]
name = "day5"
harness = false
        
[[bench]]
name = "day6"
harness = false
        
[[bench]]
name = "day7"
harness = false
        
[[bench]]
name = "day8"
harness = false
        
[[bench]]
name = "day9"
harness = false
        
[[bench]]
name = "day10"
harness = false
        
[[bench]]
name = "day11"
harness = false
        
[[bench]]
name = "day12"
harness = false